smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/inline-io/inline-single-error.smithy
// Syntax error at line 6, column 12: Expected COLON(':') but found EQUAL('=')
$version: "2.0"
namespace smithy.example

operation MyOperation {
    errors = [
        := {}
    ]
}
